<?xml version="1.0"?>
<package format="2">
  <name>motion_planning</name>
  <version>0.0.0</version>
  <description>The motion_planning package</description>

  <maintainer email="sugihara@todo.todo">sugihara</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pinocchio</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>pinocchio</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
